<?xml version="1.0"?>
<package format="2">
  <name>usb_camera_node</name>
  <version>0.1.0</version>
  <description>USB camera node for ROS</description>
  <maintainer email="adnroboticsfr@gmail.com">ADNRoboticsfr</maintainer>
  <license>Apache license</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
</package>
